--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
-    <title>Tuto Graven - Boutique de plantes</title>
+    <title>Tuto Hélène - Boutique de plantes</title>
 </head>
 
 <body>
