test: restaure code de base

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="shop">
             <i class="delivery-icon fas fa-store"></i>
             <p class="box-content">
-                Nos magasins à service
+                Nos magasins à votre service
             </p>
         </div>
         <div class="withdrawal">
