feat: refacto code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
     <title>Tuto Hélène - Boutique de plantes</title>
@@ -29,11 +28,7 @@
             </div>
         </header>
         <div class="landing">
-            <h1 class="big-title">Nature Emoi, meilleur que le chocolat.</h1>
-            <a href="#delivery" class="delivery-link">
-                <span class="scroll-text" data-text="Scroll">Scroll</span>
-                <i class="scroll-icon fas fa-angle-down"></i>
-            </a>
+            <h1 class="big-title">Bienvenue sur Nature Emoi</h1>
         </div>
     </section>
     <section id="delivery" class="delivery-container">
