--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"></script>
     <title>Tuto Hélène - Boutique de plantes</title>
 </head>
 
@@ -123,7 +123,7 @@
     </section>
     <footer id="footer" class="footer">
         <span class="copyrights">&copy; 2020 - Nature Emoi</span>
-        <a href="#" class="conditions">Condition générales de vente</a>
+        <a href="#" class="conditions">Conditions générales de vente</a>
     </footer>
     <script>
         const burgerContainer = document.querySelector('.burger-container');
